--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
         <p>- Built with HTML5, CSS3, JavaScript ES6, JSON, React.js</p>
         <p>- View at <a href="https://portfolio-6f54ou3it-shahinovic.vercel.app/">https://portfolio-6f54ou3it-shahinovic.vercel.app</a></p>
 
+
+        <h4><i class="fa fa-angle-right"></i> marketing-website</h4>
+        <p>This is a marketing website, The website showcases various products and allows users to add items to their cart.</p>
+        <p>- Built using Vite, React.js, Redux, and Redux Toolkit.</p>
+        <p>- View at <a href="https://marketing-website-chi-ten.vercel.app/">https://marketing-website-chi-ten.vercel.app/</a></p>
+
+        <h4><i class="fa fa-angle-right"></i> computer-engineering</h4>
+        <p>This is a computer engineering app, The app provides various features and information related to computer engineering.</p>
+        <p>- Built using Vite, React.js, Redux,Bootstrap, React-Bootstrap, and Redux Toolkit.</p>
+        <p>- View at <a href="https://computer-engineering.vercel.app/">https://computer-engineering.vercel.app/</a></p>
+
+
         <h4><i class="fa fa-angle-right"></i> Crytoverse</h4>
         <p>CryptoVerse is a web application designed for cryptocurrency traders and enthusiasts. It provides real-time updates on cryptocurrency prices, market trends, and news, as well as advanced tools for technical analysis and social features for community building.</p>
         <p>- Built with HTML5, CSS3, JavaScript ES6, React.js, antd, chart.js,  millify, moment, @reduxjs/toolkit</p>
