--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <span><i class="fa fa-angle-right"></i> SASS</span>
             <span><i class="fa fa-angle-right"></i> React.js</span>
             <span><i class="fa fa-angle-right"></i> Redux & Redux toolkit</span>
+            <span><i class="fa fa-angle-right"></i> React Query</span>
+            
         </div>
     </section>
 
