--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         <h4><i class="fa fa-angle-right"></i> Student in Faculty of Law</h4>
         <p>Menofia university - Menofia - Egypt</p>
         <p>Undergraduate, 2019 - 2023</p>
+        <h4><i class="fa fa-angle-right"></i> Front end development Diploma at Route Academy</h4>
+        <p>Route academy</p>
+        <p>2024</p>
     </section>
 
     <section>
@@ -198,6 +201,7 @@
 
     <section>
         <h2>Certificates</h2>
+       
         <h4><i class="fa fa-angle-right"></i> Udacity - Professional Web Development</h4>
         <p>
             - Verify at 
